# temporal-primitive

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RECOVERY_NOTES.md  proposal_temporal_primitives.md  pyproject.toml  recovery_replay_log.json
configs/: model_derived_taxonomy_v1_pilot.yaml  model_derived_taxonomy_v1_validation.yaml  motif_taxonomy_v0.yaml
docs/: 00_local_model_download.md  00_narrative_rules.md  01_research_proposal.md  02_feasibility_model_loading_report.md  03_external_weak_motif_labeling_report.md  05_second_pilot_discovery_report.md  06_cluster_card_review_report.md  07_cluster_level_controlled_validation_report.md  101_claude_code_handoff.md  10_input_embedding_ablation_report.md  11_chronos_layer_effect_main_report.md  12_distance_metric_ablation_report.md  13_bolt_forecasting_probe_report.md  14_bolt_contextualization_report.md  15_bolt_main_figure_report.md  16_dataset_chronos_pretraining_membership.md  17_publication_figures.md  18_paper_reproduction.md  80_external_weak_motif_probe_sanity_check.md  90_advisor_meeting_ppt_material_pack.md  91_advisor_meeting_ppt_draft_archive.md  92_ppt_reproducibility_check.md  93_last_week_ppt_archive_manifest.md  94_weekly_advisor_ppt_draft.md  95_dynamical_systems_story_ppt_draft.md  96_notion_dynamical_story_report.md  97_pca_then_kmeans_cluster_report.md  97_tsne_then_kmeans_cluster_report.md  98_pca_domain_label_report.md  98_tsne_domain_label_report.md  99_chronos2_archive_and_chronos_bolt_pivot.md  README.md  chronos_layer_effect_report.md  cluster_card_review_report.md  ppt_draft_advisor_meeting.md  (+7 more)
(+89 files in other folders)
